# demonstration_layer

./: .travis.yml  CMakeLists.txt  README.md  demonstration_layer_plugin.xml  package.xml
cfg/: DemonstrationLayer.cfg
demonstration_layer/: CMakeLists.txt  costs.yaml  demonstration_layer_plugin.xml  package.xml
demonstration_layer/include/demonstration_layer/: demonstration_layer.h  feature.h  line_iterator.h  macrocell.h
demonstration_layer/launch/: fake_demo_input.launch  move_base.launch  simple_costmap.launch  simple_demonstration_layer.launch  stage_no_movebase.launch
demonstration_layer/param/: global_costmap_params.yaml  move_base_params.yaml
demonstration_layer/rviz/: demonstration_layer.rviz
demonstration_layer/scripts/: fake_map_tf
demonstration_layer/src/: demonstration_layer.cpp  feature.cpp  macrocell.cpp
demonstration_layer/test/: tests.cpp
demonstration_layer_msgs/: CMakeLists.txt  package.xml
demonstration_layer_msgs/msg/: BucketCost.msg  BucketWeight.msg  Costs.msg  FeatureCost.msg  FeatureWeight.msg  MacroCellCost.msg  MacroCellWeight.msg  Weights.msg
demonstration_layer_msgs/srv/: Cost.srv
include/demonstration_layer/: demo_pose_stamped.h  demonstration_layer.h  demonstration_layer_2.h  feature.h  line_iterator.h  macrocell.h
launch/: move_base.launch  simple_demonstartion_layer.launch  simple_demonstration_layer.launch  stage_no_movebase.launch  turtlebot.launch  turtlebot_in_stage.launch  turtlebot_move_base.launch
param/: global_costmap_params.yaml
rviz/: demonstration_layer.rviz  simple_demonstration_layer.rviz
scripts/: fake_demo_input
src/: demonstration_layer.cpp  demonstration_layer_2.cpp  feature.cpp  macrocell.cpp
test/: tests.cpp
