<?xml version="1.0"?>
<package format="2">
  <name>demonstration_layer</name>
  <version>0.0.0</version>
  <description>The demonstration_layer package</description>

  <maintainer email="mitranopeter@gmail.com">peter</maintainer>

  <license>WTFPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>costmap_2d</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <costmap_2d plugin="${prefix}/demonstration_layer_plugin.xml" />
  </export>
</package>
